tests/cases/errors/system_subroutine_unsupported/main.sv
module Top;
  int x;
  initial $monitor("x=%0d", x);
endmodule
